--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,52 +1,32 @@
 {% extends 'base.html'%}
 {% import 'macros.html' as macro%}
 
-<!-- Styles block -->
-
-{% block content %}
-<div class="main">
-    <div class="container">
-    <h1 style="text-align: center" class="title">Pitcher</h1>
-    <h3>say something meaningful?</h3>
-    <h2>Get started:</h2>
-    <ol>
-        <li><h4>Sign up and login to access content</h4></li>
-        <li><h4>Receive a welcoming email once you sign up</h4></li>
-    </ol>
-    </div>
-</div>
-<div class="container">
-    {% if pitches %}
-    {% for item in pitches %}
-    <div class="card">
-        <div class="card-header">
-            <p>{{ item.title }}</p>
-            <p>{{ item.category }}</p>
-        </div>
-        <div class="card-body">
-            <p>{{ item.pitch_statement }}</p>
-        </div>
-        <div class="card-footer">
-            <h4>comments</h4>
-            <div class="container">
-                {% if zee %}
-                {% for zenus in zee.reviews.all() %}
-                    <div class="card">
-                        <div class="card-body">
-                            {{ zenus.pitch_title }}
-                        </div>
-                    </div>
-                {% endfor%}
-                {% else %}
-                <p>No comments at the moment</p>
-                {% endif %}
-            </div>
-        </div>
-    </div>
-    {% endfor %}
-    {% else %}
-    <h4>There are no pitches at the moment</h4>
-    <a href="/" class="btn btn-primary"></a>
-    {% endif %}
-</div>
+{% block styles%}
+    {{ super() }}
 {% endblock %}
+{% block content %}
+
+     
+
+     
+    <div class="container" style="font-family: 'Russo One', sans-serif">
+       
+
+      <div class="row" style="margin-top:30px">
+          {% if current_user.is_authenticated%}
+          <h1><u>Hello {{current_user.username}}</u></h1>
+        {% else %}
+          <h1><u>Hello stranger</u></h1>
+        {%endif%}
+        {%if current_user.is_authenticated%}
+        <h4 class="text-left"><a class="btn btn-success" href="{{url_for('main.new_pitch')}}"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>Add Category</a></h4>
+        {% endif %}
+          {{ macro.displayCategoryList(categories) }}
+        </div>
+        {{ macro.displayPitches(pitches) }}
+<!-- {% endblock %} -->
+
+</div>
+ 
+ 
+ </style>
