removed read comments button and changed font

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,6 +12,8 @@
 
 {%block styles %}
   {{super()}}
+  <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Caveat&display=swap" rel="stylesheet">
   <!--Importing the simple mde css and js files  -->
   {{ simplemde.css}}
   {{ simplemde.js }}
