--- a/app/templates/category.html
+++ b/app/templates/category.html
@@ -4,7 +4,7 @@
 {% block content %}
   <div class=" col-md-10 col-md-offset-1 col-sm-12">
       <h3 class="text-center">{{category.name|upper}}</h3>
-       <a class="btn btn-primary text-center text-danger " href="/category/new-pitch/{{category.id}}"> Post a Pitch</a>
+       <a class="btn -primary text-center text-danger " href="/category/new-pitch/{{category.id}}"> Post a Pitch</a>
        <HR>
   </div>
 
