--- a/app/templates/new_pitch.html
+++ b/app/templates/new_pitch.html
@@ -1,15 +1,16 @@
 {% extends 'base.html' %}
 {% import 'bootstrap/wtf.html' as wtf %}
- {%block styles%}
-  {{ super() }}
+{%block styles%}
+{{ super() }}
 
 {%endblock%}
 
 {% block content %}
-<div class="container col-md-6" style="text-align:center">
-  <div class="well">
-    <hr>
-    {{wtf.quick_form(PitchForm)}}
- </div>
+
+
+<div class="container">
+
+
+    {{wtf.quick_form(Pitch_Form)}}
 </div>
 {% endblock %}
