--- a/app/templates/pitcher.html
+++ b/app/templates/pitcher.html
@@ -17,7 +17,7 @@
                 
                 
                 {% endif %}
-                <a class="btn btn-primary text-center text-danger" href="/category/pitch/new/{{pitch.id}}">Write a new Pitch</a>
+                <a class=" btn-primary text-center text-danger" href="/category/pitch/new/{{pitch.id}}">Write a new Pitch</a>
 
         </div>
 
