--- a/app/templates/post_comment.html
+++ b/app/templates/post_comment.html
@@ -7,7 +7,7 @@
 {% block content %}
 <div class="container">
   {% for comment in comments %}
-  <div style="font-family: 'Caveat', cursive; font-size: ">
+  <div style="font-family: 'Caveat', cursive">
     {{comment.opinion}}
     {{comment.time_posted}}
   </div>
