--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -16,8 +16,8 @@
   <div class="col-md-12">
     <div class="row">
       <!-- <p>{{pitches.name|upper}}</p></a> -->
-      <div class="col-md-10 col-sm-12">
-        <h3 style="color: blue">{{pitches.title}}</h3>
+      <div style="font-family: 'Luckiest Guy', cursive;">
+        <h3 style="color:white ">{{pitches.title}}</h3>
         
 
         <a href=" {{url_for('.post_comment',id=pitches.id)}}"> <button class="btn btn-danger">Add COMMENT</button></a>
